[gd_scene load_steps=11 format=3 uid="uid://chvmqd7r1h3i7"]

[ext_resource type="Script" path="res://scenes/levels/lvl_1.gd" id="1_3ojlo"]
[ext_resource type="Texture2D" uid="uid://bwi5fmpub3k1d" path="res://art/menus/tilemap.png" id="4_rg3y7"]
[ext_resource type="PackedScene" uid="uid://bt3dggl2p6ssf" path="res://scenes/food/Apple.tscn" id="4_yca7a"]
[ext_resource type="PackedScene" uid="uid://3o25pwr3refe" path="res://scenes/player/player.tscn" id="5_2khqk"]
[ext_resource type="PackedScene" uid="uid://d2pic0kmax8f4" path="res://scenes/menus/game_over_menu.tscn" id="5_ht16u"]
[ext_resource type="Texture2D" uid="uid://wxl165xaak4a" path="res://art/menus/lvl 1.png" id="6_aosvi"]
[ext_resource type="FontFile" uid="uid://bh5qqs5whlyvo" path="res://art/fonts/tahoma.ttf" id="7_ma4u2"]
[ext_resource type="AudioStream" uid="uid://b1tra2ggt8kb3" path="res://art/sounds/Yume 2kki OST - Cog Maze (Extended).mp3" id="8_k4chf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tiql5"]
texture = ExtResource("4_rg3y7")
texture_region_size = Vector2i(20, 20)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_oss7h"]
tile_size = Vector2i(20, 20)
sources/1 = SubResource("TileSetAtlasSource_tiql5")

[node name="lvl_1" type="Node"]
script = ExtResource("1_3ojlo")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_oss7h")
rendering_quadrant_size = 20
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 2, 1, 0, 4, 1, 0, 6, 1, 0, 8, 1, 0, 10, 1, 0, 12, 1, 0, 14, 1, 0, 16, 1, 0, 18, 1, 0, 1, 131073, 0, 3, 131073, 0, 5, 131073, 0, 7, 131073, 0, 9, 131073, 0, 11, 131073, 0, 13, 131073, 0, 15, 131073, 0, 17, 131073, 0, 65536, 131073, 0, 65538, 131073, 0, 65540, 131073, 0, 65542, 131073, 0, 65544, 131073, 0, 65546, 131073, 0, 65548, 131073, 0, 65550, 131073, 0, 65552, 131073, 0, 65554, 131073, 0, 65556, 131073, 0, 65558, 131073, 0, 65555, 1, 0, 65553, 1, 0, 65551, 1, 0, 65549, 1, 0, 65547, 1, 0, 65545, 1, 0, 65543, 1, 0, 65541, 1, 0, 65539, 1, 0, 65537, 1, 0, 20, 1, 0, 22, 1, 0, 23, 131073, 0, 21, 131073, 0, 19, 131073, 0, 65557, 1, 0, 65559, 1, 0, 131072, 1, 0, 196608, 131073, 0, 131073, 131073, 0, 196609, 1, 0, 131074, 1, 0, 196610, 131073, 0, 131075, 131073, 0, 196611, 1, 0, 131076, 1, 0, 196612, 131073, 0, 131077, 131073, 0, 196613, 1, 0, 131078, 1, 0, 196614, 131073, 0, 131079, 131073, 0, 196615, 1, 0, 131080, 1, 0, 196616, 131073, 0, 131081, 131073, 0, 196617, 1, 0, 131082, 1, 0, 196618, 131073, 0, 131083, 131073, 0, 196619, 1, 0, 131084, 1, 0, 196620, 131073, 0, 131085, 131073, 0, 196621, 1, 0, 131086, 1, 0, 196622, 131073, 0, 131087, 131073, 0, 196623, 1, 0, 131088, 1, 0, 196624, 131073, 0, 131089, 131073, 0, 196625, 1, 0, 131090, 1, 0, 196626, 131073, 0, 131091, 131073, 0, 196627, 1, 0, 131092, 1, 0, 196628, 131073, 0, 131093, 131073, 0, 196629, 1, 0, 131094, 1, 0, 196630, 131073, 0, 131095, 131073, 0, 196631, 1, 0, 262144, 1, 0, 327680, 131073, 0, 262145, 131073, 0, 327681, 1, 0, 262146, 1, 0, 327682, 131073, 0, 262147, 131073, 0, 327683, 1, 0, 262148, 1, 0, 327684, 131073, 0, 262149, 131073, 0, 327685, 1, 0, 262150, 1, 0, 327686, 131073, 0, 262151, 131073, 0, 327687, 1, 0, 262152, 1, 0, 327688, 131073, 0, 262153, 131073, 0, 327689, 1, 0, 262154, 1, 0, 327690, 131073, 0, 262155, 131073, 0, 327691, 1, 0, 262156, 1, 0, 327692, 131073, 0, 262157, 131073, 0, 327693, 1, 0, 262158, 1, 0, 327694, 131073, 0, 262159, 131073, 0, 327695, 1, 0, 262160, 1, 0, 327696, 131073, 0, 262161, 131073, 0, 327697, 1, 0, 262162, 1, 0, 327698, 131073, 0, 262163, 131073, 0, 327699, 1, 0, 262164, 1, 0, 327700, 131073, 0, 262165, 131073, 0, 327701, 1, 0, 262166, 1, 0, 327702, 131073, 0, 262167, 131073, 0, 327703, 1, 0, 393216, 1, 0, 458752, 131073, 0, 393217, 131073, 0, 458753, 1, 0, 393218, 1, 0, 458754, 131073, 0, 393219, 131073, 0, 458755, 1, 0, 393220, 1, 0, 458756, 131073, 0, 393221, 131073, 0, 458757, 1, 0, 393222, 1, 0, 458758, 131073, 0, 393223, 131073, 0, 458759, 1, 0, 393224, 1, 0, 458760, 131073, 0, 393225, 131073, 0, 458761, 1, 0, 393226, 1, 0, 458762, 131073, 0, 393227, 131073, 0, 458763, 1, 0, 393228, 1, 0, 458764, 131073, 0, 393229, 131073, 0, 458765, 1, 0, 393230, 1, 0, 458766, 131073, 0, 393231, 131073, 0, 458767, 1, 0, 393232, 1, 0, 458768, 131073, 0, 393233, 131073, 0, 458769, 1, 0, 393234, 1, 0, 458770, 131073, 0, 393235, 131073, 0, 458771, 1, 0, 393236, 1, 0, 458772, 131073, 0, 393237, 131073, 0, 458773, 1, 0, 393238, 1, 0, 458774, 131073, 0, 393239, 131073, 0, 458775, 1, 0, 524288, 1, 0, 589824, 131073, 0, 524289, 131073, 0, 589825, 1, 0, 524290, 1, 0, 589826, 131073, 0, 524291, 131073, 0, 589827, 1, 0, 524292, 1, 0, 589828, 131073, 0, 524293, 131073, 0, 589829, 1, 0, 524294, 1, 0, 589830, 131073, 0, 524295, 131073, 0, 589831, 1, 0, 524296, 1, 0, 589832, 131073, 0, 524297, 131073, 0, 589833, 1, 0, 524298, 1, 0, 589834, 131073, 0, 524299, 131073, 0, 589835, 1, 0, 524300, 1, 0, 589836, 131073, 0, 524301, 131073, 0, 589837, 1, 0, 524302, 1, 0, 589838, 131073, 0, 524303, 131073, 0, 589839, 1, 0, 524304, 1, 0, 589840, 131073, 0, 524305, 131073, 0, 589841, 1, 0, 524306, 1, 0, 589842, 131073, 0, 524307, 131073, 0, 589843, 1, 0, 524308, 1, 0, 589844, 131073, 0, 524309, 131073, 0, 589845, 1, 0, 524310, 1, 0, 589846, 131073, 0, 524311, 131073, 0, 589847, 1, 0, 655360, 1, 0, 720896, 131073, 0, 655361, 131073, 0, 720897, 1, 0, 655362, 1, 0, 720898, 131073, 0, 655363, 131073, 0, 720899, 1, 0, 655364, 1, 0, 720900, 131073, 0, 655365, 131073, 0, 720901, 1, 0, 655366, 1, 0, 720902, 131073, 0, 655367, 131073, 0, 720903, 1, 0, 655368, 1, 0, 720904, 131073, 0, 655369, 131073, 0, 720905, 1, 0, 655370, 1, 0, 720906, 131073, 0, 655371, 131073, 0, 720907, 1, 0, 655372, 1, 0, 720908, 131073, 0, 655373, 131073, 0, 720909, 1, 0, 655374, 1, 0, 720910, 131073, 0, 655375, 131073, 0, 720911, 1, 0, 655376, 1, 0, 720912, 131073, 0, 655377, 131073, 0, 720913, 1, 0, 655378, 1, 0, 720914, 131073, 0, 655379, 131073, 0, 720915, 1, 0, 655380, 1, 0, 720916, 131073, 0, 655381, 131073, 0, 720917, 1, 0, 655382, 1, 0, 720918, 131073, 0, 655383, 131073, 0, 720919, 1, 0, 786432, 1, 0, 851968, 131073, 0, 786433, 131073, 0, 851969, 1, 0, 786434, 1, 0, 851970, 131073, 0, 786435, 131073, 0, 851971, 1, 0, 786436, 1, 0, 851972, 131073, 0, 786437, 131073, 0, 851973, 1, 0, 786438, 1, 0, 851974, 131073, 0, 786439, 131073, 0, 851975, 1, 0, 786440, 1, 0, 851976, 131073, 0, 786441, 131073, 0, 851977, 1, 0, 786442, 1, 0, 851978, 131073, 0, 786443, 131073, 0, 851979, 1, 0, 786444, 1, 0, 851980, 131073, 0, 786445, 131073, 0, 851981, 1, 0, 786446, 1, 0, 851982, 131073, 0, 786447, 131073, 0, 851983, 1, 0, 786448, 1, 0, 851984, 131073, 0, 786449, 131073, 0, 851985, 1, 0, 786450, 1, 0, 851986, 131073, 0, 786451, 131073, 0, 851987, 1, 0, 786452, 1, 0, 851988, 131073, 0, 786453, 131073, 0, 851989, 1, 0, 786454, 1, 0, 851990, 131073, 0, 786455, 131073, 0, 851991, 1, 0, 917504, 1, 0, 983040, 131073, 0, 917505, 131073, 0, 983041, 1, 0, 917506, 1, 0, 983042, 131073, 0, 917507, 131073, 0, 983043, 1, 0, 917508, 1, 0, 983044, 131073, 0, 917509, 131073, 0, 983045, 1, 0, 917510, 1, 0, 983046, 131073, 0, 917511, 131073, 0, 983047, 1, 0, 917512, 1, 0, 983048, 131073, 0, 917513, 131073, 0, 983049, 1, 0, 917514, 1, 0, 983050, 131073, 0, 917515, 131073, 0, 983051, 1, 0, 917516, 1, 0, 983052, 131073, 0, 917517, 131073, 0, 983053, 1, 0, 917518, 1, 0, 983054, 131073, 0, 917519, 131073, 0, 983055, 1, 0, 917520, 1, 0, 983056, 131073, 0, 917521, 131073, 0, 983057, 1, 0, 917522, 1, 0, 983058, 131073, 0, 917523, 131073, 0, 983059, 1, 0, 917524, 1, 0, 983060, 131073, 0, 917525, 131073, 0, 983061, 1, 0, 917526, 1, 0, 983062, 131073, 0, 917527, 131073, 0, 983063, 1, 0, 1048576, 1, 0, 1114112, 131073, 0, 1048577, 131073, 0, 1114113, 1, 0, 1048578, 1, 0, 1114114, 131073, 0, 1048579, 131073, 0, 1114115, 1, 0, 1048580, 1, 0, 1114116, 131073, 0, 1048581, 131073, 0, 1114117, 1, 0, 1048582, 1, 0, 1114118, 131073, 0, 1048583, 131073, 0, 1114119, 1, 0, 1048584, 1, 0, 1114120, 131073, 0, 1048585, 131073, 0, 1114121, 1, 0, 1048586, 1, 0, 1114122, 131073, 0, 1048587, 131073, 0, 1114123, 1, 0, 1048588, 1, 0, 1114124, 131073, 0, 1048589, 131073, 0, 1114125, 1, 0, 1048590, 1, 0, 1114126, 131073, 0, 1048591, 131073, 0, 1114127, 1, 0, 1048592, 1, 0, 1114128, 131073, 0, 1048593, 131073, 0, 1114129, 1, 0, 1048594, 1, 0, 1114130, 131073, 0, 1048595, 131073, 0, 1114131, 1, 0, 1048596, 1, 0, 1114132, 131073, 0, 1048597, 131073, 0, 1114133, 1, 0, 1048598, 1, 0, 1114134, 131073, 0, 1048599, 131073, 0, 1114135, 1, 0, 1179648, 1, 0, 1245184, 131073, 0, 1179649, 131073, 0, 1245185, 1, 0, 1179650, 1, 0, 1245186, 131073, 0, 1179651, 131073, 0, 1245187, 1, 0, 1179652, 1, 0, 1245188, 131073, 0, 1179653, 131073, 0, 1245189, 1, 0, 1179654, 1, 0, 1245190, 131073, 0, 1179655, 131073, 0, 1245191, 1, 0, 1179656, 1, 0, 1245192, 131073, 0, 1179657, 131073, 0, 1245193, 1, 0, 1179658, 1, 0, 1245194, 131073, 0, 1179659, 131073, 0, 1245195, 1, 0, 1179660, 1, 0, 1245196, 131073, 0, 1179661, 131073, 0, 1245197, 1, 0, 1179662, 1, 0, 1245198, 131073, 0, 1179663, 131073, 0, 1245199, 1, 0, 1179664, 1, 0, 1245200, 131073, 0, 1179665, 131073, 0, 1245201, 1, 0, 1179666, 1, 0, 1245202, 131073, 0, 1179667, 131073, 0, 1245203, 1, 0, 1179668, 1, 0, 1245204, 131073, 0, 1179669, 131073, 0, 1245205, 1, 0, 1179670, 1, 0, 1245206, 131073, 0, 1179671, 131073, 0, 1245207, 1, 0, 1310720, 1, 0, 1376256, 131073, 0, 1310721, 131073, 0, 1376257, 1, 0, 1310722, 1, 0, 1376258, 131073, 0, 1310723, 131073, 0, 1376259, 1, 0, 1310724, 1, 0, 1376260, 131073, 0, 1310725, 131073, 0, 1376261, 1, 0, 1310726, 1, 0, 1376262, 131073, 0, 1310727, 131073, 0, 1376263, 1, 0, 1310728, 1, 0, 1376264, 131073, 0, 1310729, 131073, 0, 1376265, 1, 0, 1310730, 1, 0, 1376266, 131073, 0, 1310731, 131073, 0, 1376267, 1, 0, 1310732, 1, 0, 1376268, 131073, 0, 1310733, 131073, 0, 1376269, 1, 0, 1310734, 1, 0, 1376270, 131073, 0, 1310735, 131073, 0, 1376271, 1, 0, 1310736, 1, 0, 1376272, 131073, 0, 1310737, 131073, 0, 1376273, 1, 0, 1310738, 1, 0, 1376274, 131073, 0, 1310739, 131073, 0, 1376275, 1, 0, 1310740, 1, 0, 1376276, 131073, 0, 1310741, 131073, 0, 1376277, 1, 0, 1310742, 1, 0, 1376278, 131073, 0, 1310743, 131073, 0, 1376279, 1, 0, 1441792, 1, 0, 1507328, 131073, 0, 1441793, 131073, 0, 1507329, 1, 0, 1441794, 1, 0, 1507330, 131073, 0, 1441795, 131073, 0, 1507331, 1, 0, 1441796, 1, 0, 1507332, 131073, 0, 1441797, 131073, 0, 1507333, 1, 0, 1441798, 1, 0, 1507334, 131073, 0, 1441799, 131073, 0, 1507335, 1, 0, 1441800, 1, 0, 1507336, 131073, 0, 1441801, 131073, 0, 1507337, 1, 0, 1441802, 1, 0, 1507338, 131073, 0, 1441803, 131073, 0, 1507339, 1, 0, 1441804, 1, 0, 1507340, 131073, 0, 1441805, 131073, 0, 1507341, 1, 0, 1441806, 1, 0, 1507342, 131073, 0, 1441807, 131073, 0, 1507343, 1, 0, 1441808, 1, 0, 1507344, 131073, 0, 1441809, 131073, 0, 1507345, 1, 0, 1441810, 1, 0, 1507346, 131073, 0, 1441811, 131073, 0, 1507347, 1, 0, 1441812, 1, 0, 1507348, 131073, 0, 1441813, 131073, 0, 1507349, 1, 0, 1441814, 1, 0, 1507350, 131073, 0, 1441815, 131073, 0, 1507351, 1, 0, 24, 65537, 0, 65560, 65537, 0, 131096, 65537, 0, 196632, 65537, 0, 262168, 65537, 0, 327704, 65537, 0, 393240, 65537, 0, 458776, 65537, 0, 524312, 65537, 0, 589848, 65537, 0, 655384, 65537, 0, 720920, 65537, 0, 786456, 65537, 0, 851992, 65537, 0, 917528, 65537, 0, 983064, 65537, 0, 1048600, 65537, 0, 1114136, 65537, 0, 1179672, 65537, 0, 1245208, 65537, 0, 1310744, 65537, 0, 1376280, 65537, 0, 1441816, 65537, 0, 1507352, 65537, 0, 25, 65537, 0, 65561, 65537, 0, 131097, 65537, 0, 196633, 65537, 0, 262169, 65537, 0, 327705, 65537, 0, 393241, 65537, 0, 458777, 65537, 0, 524313, 65537, 0, 589849, 65537, 0, 655385, 65537, 0, 720921, 65537, 0, 786457, 65537, 0, 851993, 65537, 0, 917529, 65537, 0, 983065, 65537, 0, 1048601, 65537, 0, 1114137, 65537, 0, 1179673, 65537, 0, 1245209, 65537, 0, 1310745, 65537, 0, 1376281, 65537, 0, 1441817, 65537, 0, 1507353, 65537, 0, 26, 65537, 0, 65562, 65537, 0, 131098, 65537, 0, 196634, 65537, 0, 262170, 65537, 0, 327706, 65537, 0, 393242, 65537, 0, 458778, 65537, 0, 524314, 65537, 0, 589850, 65537, 0, 655386, 65537, 0, 720922, 65537, 0, 786458, 65537, 0, 851994, 65537, 0, 917530, 65537, 0, 983066, 65537, 0, 1048602, 65537, 0, 1114138, 65537, 0, 1179674, 65537, 0, 1245210, 65537, 0, 1310746, 65537, 0, 1376282, 65537, 0, 1441818, 65537, 0, 1507354, 65537, 0, 27, 65537, 0, 65563, 65537, 0, 131099, 65537, 0, 196635, 65537, 0, 262171, 65537, 0, 327707, 65537, 0, 393243, 65537, 0, 458779, 65537, 0, 524315, 65537, 0, 589851, 65537, 0, 655387, 65537, 0, 720923, 65537, 0, 786459, 65537, 0, 851995, 65537, 0, 917531, 65537, 0, 983067, 65537, 0, 1048603, 65537, 0, 1114139, 65537, 0, 1179675, 65537, 0, 1245211, 65537, 0, 1310747, 65537, 0, 1376283, 65537, 0, 1441819, 65537, 0, 1507355, 65537, 0, 28, 65537, 0, 65564, 65537, 0, 131100, 65537, 0, 196636, 65537, 0, 262172, 65537, 0, 327708, 65537, 0, 393244, 65537, 0, 458780, 65537, 0, 524316, 65537, 0, 589852, 65537, 0, 655388, 65537, 0, 720924, 65537, 0, 786460, 65537, 0, 851996, 65537, 0, 917532, 65537, 0, 983068, 65537, 0, 1048604, 65537, 0, 1114140, 65537, 0, 1179676, 65537, 0, 1245212, 65537, 0, 1310748, 65537, 0, 1376284, 65537, 0, 1441820, 65537, 0, 1507356, 65537, 0, 29, 65537, 0, 65565, 65537, 0, 131101, 65537, 0, 196637, 65537, 0, 262173, 65537, 0, 327709, 65537, 0, 393245, 65537, 0, 458781, 65537, 0, 524317, 65537, 0, 589853, 65537, 0, 655389, 65537, 0, 720925, 65537, 0, 786461, 65537, 0, 851997, 65537, 0, 917533, 65537, 0, 983069, 65537, 0, 1048605, 65537, 0, 1114141, 65537, 0, 1179677, 65537, 0, 1245213, 65537, 0, 1310749, 65537, 0, 1376285, 65537, 0, 1441821, 65537, 0, 1507357, 65537, 0, 30, 65537, 0, 65566, 65537, 0, 131102, 65537, 0, 196638, 65537, 0, 262174, 65537, 0, 327710, 65537, 0, 393246, 65537, 0, 458782, 65537, 0, 524318, 65537, 0, 589854, 65537, 0, 655390, 65537, 0, 720926, 65537, 0, 786462, 65537, 0, 851998, 65537, 0, 917534, 65537, 0, 983070, 65537, 0, 1048606, 65537, 0, 1114142, 65537, 0, 1179678, 65537, 0, 1245214, 65537, 0, 1310750, 65537, 0, 1376286, 65537, 0, 1441822, 65537, 0, 1507358, 65537, 0, 31, 65537, 0, 65567, 65537, 0, 131103, 65537, 0, 196639, 65537, 0, 262175, 65537, 0, 327711, 65537, 0, 393247, 65537, 0, 458783, 65537, 0, 524319, 65537, 0, 589855, 65537, 0, 655391, 65537, 0, 720927, 65537, 0, 786463, 65537, 0, 851999, 65537, 0, 917535, 65537, 0, 983071, 65537, 0, 1048607, 65537, 0, 1114143, 65537, 0, 1179679, 65537, 0, 1245215, 65537, 0, 1310751, 65537, 0, 1376287, 65537, 0, 1441823, 65537, 0, 1507359, 65537, 0)

[node name="Player" parent="." groups=["Snake"] instance=ExtResource("5_2khqk")]

[node name="Apple" parent="." groups=["Apples"] instance=ExtResource("4_yca7a")]
position = Vector2(15, -28)

[node name="Timer_chek_apple" type="Timer" parent="."]
wait_time = 0.1

[node name="GameOverMenu" parent="." instance=ExtResource("5_ht16u")]
visible = false

[node name="sidebar lvl1" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_aosvi")

[node name="ScoreLabel" type="RichTextLabel" parent="."]
offset_left = 526.0
offset_top = 6.0
offset_right = 627.0
offset_bottom = 47.0
theme_override_colors/default_color = Color(0.323415, 0.280263, 0.465223, 1)
theme_override_fonts/normal_font = ExtResource("7_ma4u2")
theme_override_font_sizes/normal_font_size = 30
text = "0"

[node name="TaskCompleted" type="Label" parent="."]
offset_left = 489.0
offset_top = 157.0
offset_right = 636.0
offset_bottom = 180.0
theme_override_colors/font_color = Color(0.34919, 0.404383, 0.122917, 1)
theme_override_fonts/font = ExtResource("7_ma4u2")
text = "Задание выполнено"

[node name="Background_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_k4chf")
volume_db = -6.613

[connection signal="Update_ScoreLabel_on_game_over" from="." to="GameOverMenu" method="_on_lvl_1_update_score_label_on_game_over"]
[connection signal="food_was_eaten" from="." to="Player" method="_on_lvl_1_food_was_eaten"]
[connection signal="food_was_eaten" from="." to="Apple" method="_on_lvl_1_food_was_eaten"]
[connection signal="start_new_game" from="." to="Player" method="new_game"]
[connection signal="food_was_eaten" from="Player" to="Apple" method="_on_player_food_was_eaten"]
[connection signal="game_over" from="Player" to="." method="_on_player_game_over"]
[connection signal="game_over" from="Player" to="Apple" method="_on_player_game_over"]
[connection signal="timeout" from="Timer_chek_apple" to="." method="_on_timer_chek_apple_timeout"]
[connection signal="restart" from="GameOverMenu" to="." method="_on_game_over_menu_restart"]
